--- a/demo/myapp/templates/todos.html
+++ b/demo/myapp/templates/todos.html
@@ -26,7 +26,7 @@
             <div class="flex-grow-1">
                 {% if todo.image %}
                 <div class="mb-2">
-                    <img src="{{ todo.image.url }}" alt="{{ todo.title }}" style="max-width: 200px; max-height: 150px; border-radius: 5px;">
+                    <img src="{{ todo.image.url }}" alt="{{ todo.title }}" style="max-width: 200px; max-height: 150px; border-radius: 5px; cursor: pointer;" onclick="openImageModal('{{ todo.image.url }}', '{{ todo.title }}')">
                 </div>
                 {% endif %}
                 {% if todo.completed %}
@@ -73,7 +73,7 @@
                             <input type="text" name="title" class="form-control mb-3" value="{{ todo.title }}" required>
                             {% if todo.image %}
                             <div class="mb-2">
-                                <img src="{{ todo.image.url }}" alt="{{ todo.title }}" style="max-width: 100%; max-height: 200px; border-radius: 5px;">
+                                <img src="{{ todo.image.url }}" alt="{{ todo.title }}" style="max-width: 100%; max-height: 200px; border-radius: 5px; cursor: pointer;" onclick="openImageModal('{{ todo.image.url }}', '{{ todo.title }}')">
                             </div>
                             {% endif %}
                             <input type="file" name="image" class="form-control" accept="image/*">
@@ -99,4 +99,22 @@
         </form>
     </div>
 </div>
+
+<!-- IMAGE PREVIEW MODAL -->
+<div id="imagePreviewModal" style="display: none; position: fixed; z-index: 9999; left: 0; top: 0; width: 100%; height: 100%; background-color: rgba(0,0,0,0.9); cursor: pointer;" onclick="closeImageModal()">
+    <span style="position: absolute; top: 20px; right: 35px; color: #f1f1f1; font-size: 40px; font-weight: bold; cursor: pointer;" onclick="closeImageModal()">&times;</span>
+    <img id="previewImage" style="margin: auto; display: block; max-width: 90%; max-height: 90%; position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);">
+</div>
+
+<script>
+function openImageModal(imageUrl, altText) {
+    document.getElementById('imagePreviewModal').style.display = 'block';
+    document.getElementById('previewImage').src = imageUrl;
+    document.getElementById('previewImage').alt = altText;
+}
+
+function closeImageModal() {
+    document.getElementById('imagePreviewModal').style.display = 'none';
+}
+</script>
 {% endblock %}
